--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~48.0.9",
+    "expo-dev-client": "~2.2.1",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "^0.16.4",
@@ -22,8 +23,9 @@
     "metro-react-native-babel-preset": "0.73.7",
     "openai": "^3.2.1",
     "react": "18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "^0.71.7",
     "react-native-dotenv": "^3.4.8",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0"
   },
